force-app/main/default/objects/Recalculation_Result__c/Recalculation_Result__c.object-meta.xml
<CustomObject>
    <label>Recalculation Result</label>
    <nameField>
        <displayFormat>RS-{0000}</displayFormat>
        <label>Recalculation Result Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recalculation Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>