force-app/main/default/objects/Recalculation_Result__c/fields/Afgift__c.field-meta.xml
<CustomField>
    <fullName>Afgift__c</fullName>
    <label>Afgift</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>