force-app/main/default/objects/Recalculation_Result__c/fields/Afgiftspligt_Vaerdi__c.field-meta.xml
<CustomField>
    <fullName>Afgiftspligt_Vaerdi__c</fullName>
    <description>Afgiftspligt Værdi from ASG</description>
    <inlineHelpText>Afgiftspligt Værdi from ASG</inlineHelpText>
    <label>Afgiftspligt Værdi</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>