force-app/main/default/objects/Recalculation_Result__c/fields/Comparison_Value__c.field-meta.xml
<CustomField>
    <fullName>Comparison_Value__c</fullName>
    <description>Afgiftspligt Vaerdi - Sample Vehicle Tax Value incl VAT</description>
    <formula>Afgiftspligt_Vaerdi__c -  Recalculation_Group__r.Sample_Vehicle__r.Tax_value_incl_VAT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Afgiftspligt Vaerdi - Sample Vehicle Tax Value incl VAT</inlineHelpText>
    <label>Comparison Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>