force-app/main/default/objects/Recalculation_Result__c/fields/Dato_for_vurdering__c.field-meta.xml
<CustomField>
    <fullName>Dato_for_vurdering__c</fullName>
    <label>Dato for vurdering</label>
    <type>Date</type>
</CustomField>