force-app/main/default/objects/Recalculation_Result__c/fields/External_ID__c.field-meta.xml
<CustomField>
    <fullName>External_ID__c</fullName>
    <description>Vurderings ID</description>
    <externalId>true</externalId>
    <inlineHelpText>Vurderings ID</inlineHelpText>
    <label>External ID</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>