force-app/main/default/objects/Recalculation_Result__c/fields/Genberegnings_regulering__c.field-meta.xml
<CustomField>
    <fullName>Genberegnings_regulering__c</fullName>
    <label>Genberegnings regulering</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>