force-app/main/default/objects/Recalculation_Result__c/fields/Handelspris__c.field-meta.xml
<CustomField>
    <fullName>Handelspris__c</fullName>
    <label>Handelspris</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>