force-app/main/default/objects/Recalculation_Result__c/fields/Horse_power__c.field-meta.xml
<CustomField>
    <fullName>Horse_power__c</fullName>
    <label>Hestekræfter</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>