force-app/main/default/objects/Recalculation_Result__c/fields/New_Resale_Price__c.field-meta.xml
<CustomField>
    <fullName>New_Resale_Price__c</fullName>
    <formula>IF(Horse_power__c &lt;= 98, ((Handelspris__c - Afgift__c) - 7088), Handelspris__c - Afgift__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Resale Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>