force-app/main/default/objects/Recalculation_Result__c/fields/Nypris__c.field-meta.xml
<CustomField>
    <fullName>Nypris__c</fullName>
    <description>New Price</description>
    <label>Nypris</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>