force-app/main/default/objects/Recalculation_Result__c/fields/Recalculation_Group__c.field-meta.xml
<CustomField>
    <fullName>Recalculation_Group__c</fullName>
    <label>Recalculation Group</label>
    <referenceTo>Recalculation_Group__c</referenceTo>
    <relationshipLabel>Recalculation Results</relationshipLabel>
    <relationshipName>Recalculation_Results</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>